# Artificial-Intelligence

./: README.md  pyproject.toml
Langchain/Chat Model/: ChatGPT.py  Gemini.py  Groq.py  HuggingFace.py  Mistral.py  localAI.py
Langchain/MyCompany/: App.py  core.py
RAG/: pyproject.toml  requirements.txt
RAG/Document Loader/: TextLoader.py  WebBaseLoader.py  pdfLoader.py
RAG/Project_RAG/: App.py  Main_Logic.py  database.py
RAG/Project_RAG/DB/00b1df8b-f772-4315-a1c1-e0757125ffc9/: index_metadata.pickle
RAG/Retrivers/: ARXIV_Retrivers.py  Retrivers.py
RAG/Retrivers/ChromaDB2/: chroma.sqlite3
RAG/Retrivers/Retriver Startegy/Firs/: MMR.py  MultyQuery.py  SimilaritySearch.py
RAG/Retrivers/Retriver Startegy/Firs/DB_MMR/: chroma.sqlite3
RAG/Retrivers/Retriver Startegy/Firs/DB_SimilaritySearch/: chroma.sqlite3
RAG/Text Spliter/: Sementic,MeaningBased.py  SplitByCharacters.py  SplitByTokens.py
RAG/VectorDB/: ChromaDB.py  LSTM.txt
RAG/VectorDB/ChromaDB/: chroma.sqlite3
Runnables(Chains)/: LLMChains.py  RunnableLambda.py  RunnableParallel_Pipeline.py  Runnables_Pipeline.py  sequence_runnable.py
