[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "google-generativeai>=0.8.6",
    "gradio>=6.19.0",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.21.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.5",
    "langchain-openai>=1.3.3",
    "mistralai>=2.5.0",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "safetensors>=0.8.0",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "transformers>=5.12.1",
]
